1.7 - 31 May 2013
[Add] 
- 	Germany language

[Fix] 
- 	IE8 bug

[Update] 
- 	Outdated scripts
- 	Theme settings
- 	Language
- 	Code refactored

===========================================================================================

1.5 - 1.6 - 20 Feb 2013
- Remove aff link!

1.4 - 14 Feb 2013
- Dropping support for IE7
- Update theme settings
- Update language
- Remove modernizr & selectivizr
- Re-organize files & code

1.3 - 07 Feb 2013
- Maintenance routine
- Update language

1.2 - 24 jan 2013
- Remove unecessary code & comment code
- Tweak responsive layout
- Update language
- Update oudated scripts

1.1 - 16 Jan 2013
- WordPress 3.5 compatibility
- Support 'link' in header code option(you can embed the google font)
- Update social widget
- bbPress support

1.0 - 17 Nov 2012
- FB Like box widget
- Social settings in theme options moved to the widget itself
- Page template to display Home page with slider
- Sidebar on single page(above and below content)
- Header code in theme options
- Custom background now using WordPress core
- Remove all @font-face, now using google webfonts
- Dynamic footer widget
- Twentytwelve like custom home page template
- Remove tooltip
- Update twitter widget
- Update language

0.2.1 - 02 Sept 2012
- Support shortcode for widget
- Allowed to put 'type' and 'src' in the textarea on the theme options
- Add html5 caption function

0.2 - 10 Aug 2012
- Change license to GPLv2
- Add typography option
- Add buddypress compatibility
- Add custom subscribe widget
- Add tooltips to the social buttons widget
- Add meta box to disable social share option on post and page
- Move hook comment-reply.js to comment_form_before
- Remove ID from linkedin url
- A little css issue in the slider
- Remove some deprecated code
- Remove some unnecessary functions
- Fix css cross platform issue
- Update language

0.1 - 22 July 2012
- Fix incompatible title tag with all in one seo pack & platinum seo pack plugin
- Remove unnecessary white space