@@ -4,10 +4,10 @@
  * 
  * This file defines custom action hooks for the Tiga Theme.
  *
- * @package 	Tiga
- * @author		Satrya
- * @license		license.txt
- * @since 		0.2
+ * @package Tiga
+ * @author Satrya
+ * @license docs/license.txt
+ * @since 0.2
  *
  */
 
